Correction de l'alignement du footer mobile

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,6 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  padding-left: 2rem;
 }
 .footer__logo {
   color: white;
