--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    padding-left: 2rem;
   }
   
   &__logo {
